--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,7 +44,7 @@ body {
 
 /*  GWA cert layout  */
 #printThis{
-  width: 100%;
+  width: 80%;
   
   align-self: center;
 }
@@ -144,3 +144,17 @@ body {
   margin-top: 2.5em;
 }
 
+/* Cert_Units */
+.table-units-middle{
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 2em;
+}
+.table-units-middle th, .table-units-middle td{
+  padding-right: 2em;
+  padding-left: 2em;
+}
+
+.gpa-table, .percent-table{
+  text-align: right;
+}
